--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,7 @@
     android:versionName="1.0" >
 
     <application
+        android:allowBackup="true"
         android:name=".base.BaseApp"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
