--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -201,6 +201,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <!-- For using notification -->
     <uses-permission android:name="android.permission.VIBRATE" />
 
