--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -202,6 +202,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
     <!-- For using notification -->
     <uses-permission android:name="android.permission.VIBRATE" />
