--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -66,6 +66,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.MainActivity_Bitmap"
+            android:theme="@style/Theme.AppCompat.Light" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.UiLogin"
             android:theme="@style/com.app.demos.theme.login" >
             <intent-filter>
