--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     compile 'com.android.support:support-v4:22.0.0'
     compile files('libs/nineoldandroids-2.4.0.jar')
     releaseCompile files('libs/android-support-v4.jar')
+    compile 'com.android.support:recyclerview-v7:22.0.0'
+    compile 'com.android.support:cardview-v7:22.0.0'
 }
 
 android {
