--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.UiImageZoom"
+            android:theme="@style/com.app.demos.theme.light" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.UiCreateFind"
             android:windowSoftInputMode="adjustUnspecified|stateHidden"
             android:theme="@style/AppTheme" >
@@ -259,6 +268,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <!-- For using notification -->
     <uses-permission android:name="android.permission.VIBRATE" />
