--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -67,11 +67,11 @@
             android:theme="@style/AppThemeNoActionBar" >
         </activity>
         <activity
-            android:name=".ui.TestImage"
+            android:name=".ui.test.TestImage"
             android:theme="@style/com.app.demos.theme.light" >
         </activity>
         <activity
-            android:name=".ui.test.UiFoxconnEssPost"
+            android:name=".ui.test.foxconn_ESS_zsf.UiFoxconnEssPost"
             android:launchMode="singleTop"
             android:theme="@style/AppThemeNoActionBar" >
         </activity>
@@ -114,7 +114,7 @@
             android:theme="@style/AppThemeNoActionBar" >
         </activity>
         <activity
-            android:name=".ui.UiMain"
+            android:name=".ui.test.UiMain"
             android:theme="@style/com.app.demos.theme.light" >
         </activity>
         <activity
@@ -122,15 +122,15 @@
             android:theme="@style/Theme.AppCompat.Light" >
         </activity>
         <activity
-            android:name=".ui.MainActivity_Bitmap"
+            android:name=".ui.test.MainActivity_Bitmap"
             android:theme="@style/Theme.AppCompat.Light" >
         </activity>
         <activity
-            android:name=".ui.UiLogin"
+            android:name=".ui.test.UiLogin"
             android:theme="@style/com.app.demos.theme.login" >
         </activity>
         <activity
-            android:name=".ui.UiIndex"
+            android:name=".ui.test.UiIndex"
             android:launchMode="singleTask"
             android:theme="@style/com.app.demos.theme.light" >
         </activity>
@@ -139,19 +139,19 @@
             android:theme="@style/com.app.demos.theme.light" >
         </activity>
         <activity
-            android:name=".ui.UiNews"
+            android:name=".ui.test.UiNews"
             android:theme="@style/com.app.demos.theme.light" >
         </activity>
         <activity
-            android:name=".ui.UiBlog"
+            android:name=".ui.test.UiBlog"
             android:theme="@style/com.app.demos.theme.light" >
         </activity>
         <activity
-            android:name=".ui.UiBlogs"
+            android:name=".ui.test.UiBlogs"
             android:theme="@style/com.app.demos.theme.light" >
         </activity>
         <activity
-            android:name=".ui.UiConfig"
+            android:name=".ui.test.UiConfig"
             android:theme="@style/com.app.demos.theme.light" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -159,7 +159,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.UiEditText"
+            android:name=".ui.test.UiEditText"
             android:launchMode="singleTop"
             android:theme="@style/com.app.demos.theme.light"
             android:windowSoftInputMode="stateVisible|adjustResize" >
@@ -170,7 +170,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.UiEditBlog"
+            android:name=".ui.test.UiEditBlog"
             android:launchMode="singleTop"
             android:theme="@style/com.app.demos.theme.light"
             android:windowSoftInputMode="stateVisible|adjustResize" >
@@ -181,7 +181,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.UiSetFace"
+            android:name=".ui.test.UiSetFace"
             android:launchMode="singleTop"
             android:theme="@style/com.app.demos.theme.light" >
         </activity>
