--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.android.support:cardview-v7:23.0.1'
     //compile 'com.github.navasmdc:MaterialDesign:1.+@aar'
+    compile files('libs/dnsjava-2.1.3.jar')
+    compile files('libs/commons-net-3.3.jar')
 }
 
 android {
