--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity
             android:name=".ui.UiCreateSpeak"
             android:launchMode="singleTop"
+            android:windowSoftInputMode="stateVisible|adjustResize"
             android:theme="@style/AppThemeNoActionBar" >
         </activity>
         <activity
