--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,10 @@
         android:allowBackup="true"
         android:name=".base.BaseApp"
         android:icon="@drawable/icon"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme" >
+
 
         <!-- Activity defines -->
         <activity
@@ -22,6 +25,16 @@
             android:launchMode="singleTop"
             android:theme="@style/AppThemeNoActionBar" />
         <activity
+            android:name=".ui.UiActionBar_v1"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <!--activity
             android:name=".ui.UiActionBar"
             android:launchMode="singleTop"
             android:theme="@style/AppThemeNoActionBar" >
@@ -29,7 +42,7 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity-->
         <activity
             android:name=".ui.UiImageZoom"
             android:launchMode="singleTop"
