--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ apply plugin: 'android'
 
 dependencies {
     compile 'com.android.support:support-annotations:23.0.1'
-    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:support-v4:23.0.1'
     compile files('libs/nineoldandroids-2.4.0.jar')
     releaseCompile files('libs/android-support-v4.jar')
@@ -19,10 +19,11 @@ dependencies {
     //compile 'com.github.navasmdc:MaterialDesign:1.+@aar'
     compile files('libs/dnsjava-2.1.3.jar')
     compile files('libs/commons-net-3.3.jar')
+    compile 'com.android.support:design:23.0.1'
 }
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 22//change to 22+ case fail import org.apache.http.HttpEntity
     buildToolsVersion "23.0.1"
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
