--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -90,6 +90,11 @@
         </activity>
         <activity
             android:name=".ui.test.zhangBen.UiZhangBen"
+            android:windowSoftInputMode="adjustUnspecified|stateHidden"
+            android:theme="@style/AppThemeNoActionBar" >
+        </activity>
+        <activity
+            android:name=".ui.test.zhangBen.UiZhangBenHistory"
             android:theme="@style/AppThemeNoActionBar" >
         </activity>
         <activity
